1.agentic-app.arc -> added final image result

--- a/1.agentic-app.arc/src/tsconfig.json
+++ b/1.agentic-app.arc/src/tsconfig.json
@@ -20,6 +20,6 @@
         "moduleDetection": "force",
         "skipLibCheck": true,
 
-        "types": ["node"] // <-- FIXED
+        "types": ["node"]
     }
 }
